--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -1,19 +1,85 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="UTF-8">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
-  </head>
-  <body>
-    <div id="content">
-      <h1>My Portfolio</h1>
-      <p>This is my portfolio.</p>
-      <p>Click <a href="/hello">here</a> to see content created by server code.</p>
-      <p>Click here to get a random message:</p>
-      <button onclick="addRandomGreeting()">Hello</button>
-      <div id="greeting-container"></div>
-    </div>
-  </body>
+
+</head>
+
+<body>
+    <nav id="navbar">
+        <p> Blessing Babajide's Portfolio</p>
+        <div id="links">
+            <a href="#intro-section" class="nav-link">Pictures</a>
+            <a href="#about-me" class="nav-link">About Me</a>
+            <a href="#facts-section" class="nav-link">Fun Facts </a>
+            <a href="#projects-section" class="nav-link">Projects</a>
+            <a href="#contact-section" class="nav-link">Contact me</a>
+        </div>
+    </nav>
+
+    <section id="intro-section">
+        <div class="pics">
+            <img src="/images/pic2.JPG" class="pic" />
+            <img src="/images/pic1.jpg" class="pic" />
+        </div>
+        <h1 id="intro">Hi! I'm Blessing (also go by Bibie) <br /> welcome to my portfolio</h1>
+        <div class="pics">
+            <img src="/images/pic3.JPG" class="pic" />
+            <img src="/images/pic4.jpg" class="pic" />
+        </div>
+    </section>
+
+    <section id="about-me">
+        <div class="write-up">
+            <p> I'm originally from Nigeria, a country in West Africa. </p>
+        </div>
+        <div class="write-up">
+            <p> I currently go to the University of Rochester in Rochester, NY <br />
+                where I'm a double major in Computer Science and Brain and Cognitive Sciences with a minor in Psychology
+            </p>
+        </div>
+    </section>
+
+    <section id="facts-section">
+        <p id="inst">Click here to get a random fun fact about The Office:</p>
+        <button onclick="addRandomGreeting()">The Office Fact</button>
+        <div id="greeting-container"></div>
+    </section>
+
+    <section id="projects-section">
+        <p id="projects-text"> Here are some of my projects: </p>
+        <div id="project-pics">
+            <a href="https://glitch.com/edit/#!/lightsoundgame?previewSize=100&attributionHidden=false&sidebarCollapsed=false&path=index.html&previewFirst=false"
+                target="_blank">
+                <img class="project-tile" src="images/project1.png" />
+            </a>
+
+        </div>
+
+    </section>
+
+    <section id="contact-section">
+        <h2 id="contact-text"> Want to reach me?</h2>
+        <div id="contact-links">
+            <a id="profile-link" href="https://github.com/bibiebliss" target="_blank">
+                <img src="/images/github.png" class="icon">
+            </a>
+            <a id="profile-link" href="https://www.linkedin.com/in/blessing-babajide/" target="_blank">
+                <img src="/images/linkedin.png" class="icon">
+            </a>
+            <a id="profile-link" href="mailto:bibiebabajide@gmail.com" target="_blank">
+                <img src="/images/email.jpeg" class="icon">
+            </a>
+        </div>
+        <h2 id="resume-text">Before you leave... here's my resume</h2>
+        <a href="/docs/resume.pdf" target="_blank">
+            <img src="/images/resume.png" id="resume-icon" />
+        </a>
+    </section>
+</body>
+
 </html>
