--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -3,11 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
-
+    <link rel=stylesheet href="https://s3-us-west-2.amazonaws.com/colors-css/2.2.0/colors.min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=ZCOOL+QingKe+HuangYou&family=ZCOOL+XiaoWei&display=swap" rel="stylesheet">
 </head>
+
 
 <body>
     <nav id="navbar">
@@ -22,25 +26,24 @@
     </nav>
 
     <section id="intro-section">
-        <div class="pics">
-            <img src="/images/pic2.JPG" class="pic" />
-            <img src="/images/pic1.jpg" class="pic" />
+        <div id="pics-top">
+            <img src="images/pic2.JPG" class="pic" />
+            <img src="images/pic1.jpg" class="pic" />
         </div>
         <h1 id="intro">Hi! I'm Blessing (also go by Bibie) <br /> welcome to my portfolio</h1>
-        <div class="pics">
-            <img src="/images/pic3.JPG" class="pic" />
-            <img src="/images/pic4.jpg" class="pic" />
+        <div id="pics-bottom">
+            <img src="images/pic3.JPG" class="pic" />
+            <img src="images/pic4.jpg" class="pic" />
         </div>
     </section>
 
     <section id="about-me">
-        <div class="write-up">
+        <div class= "write-up">
             <p> I'm originally from Nigeria, a country in West Africa. </p>
         </div>
         <div class="write-up">
-            <p> I currently go to the University of Rochester in Rochester, NY <br />
-                where I'm a double major in Computer Science and Brain and Cognitive Sciences with a minor in Psychology
-            </p>
+            <p> I currently go to the University of Rochester in Rochester, NY <br /> 
+                where I'm a double major in Computer Science and Brain and Cognitive Sciences with a minor in Psychology </p>
         </div>
     </section>
 
@@ -53,10 +56,9 @@
     <section id="projects-section">
         <p id="projects-text"> Here are some of my projects: </p>
         <div id="project-pics">
-            <a href="https://glitch.com/edit/#!/lightsoundgame?previewSize=100&attributionHidden=false&sidebarCollapsed=false&path=index.html&previewFirst=false"
-                target="_blank">
-                <img class="project-tile" src="images/project1.png" />
-            </a>
+            <a href="https://glitch.com/edit/#!/lightsoundgame?previewSize=100&attributionHidden=false&sidebarCollapsed=false&path=index.html&previewFirst=false" target="_blank">
+                <img class= "project-tile" src="images/project1.png"/>
+            </a>            
 
         </div>
 
@@ -66,20 +68,20 @@
         <h2 id="contact-text"> Want to reach me?</h2>
         <div id="contact-links">
             <a id="profile-link" href="https://github.com/bibiebliss" target="_blank">
-                <img src="/images/github.png" class="icon">
+                <img src="images/github.png" class="icon">
             </a>
             <a id="profile-link" href="https://www.linkedin.com/in/blessing-babajide/" target="_blank">
-                <img src="/images/linkedin.png" class="icon">
+                <img src="images/linkedin.png" class="icon">
             </a>
             <a id="profile-link" href="mailto:bibiebabajide@gmail.com" target="_blank">
-                <img src="/images/email.jpeg" class="icon">
+                <img src="images/email.jpeg" class="icon">
             </a>
-        </div>
+            </div>
         <h2 id="resume-text">Before you leave... here's my resume</h2>
-        <a href="/docs/resume.pdf" target="_blank">
-            <img src="/images/resume.png" id="resume-icon" />
+        <a href="docs/resume.pdf" target="_blank">
+            <img src="images/resume.png" id="resume-icon"/>
         </a>
-    </section>
-</body>
+        </section>
+  </body>
 
 </html>
