Start to fill in About Me section.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -3,11 +3,16 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
-
+    <link rel=stylesheet href="https://s3-us-west-2.amazonaws.com/colors-css/2.2.0/colors.min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=ZCOOL+QingKe+HuangYou&family=ZCOOL+XiaoWei&display=swap"
+        rel="stylesheet">
 </head>
+
 
 <body>
     <nav id="navbar">
@@ -22,24 +27,51 @@
     </nav>
 
     <section id="intro-section">
-        <div class="pics">
-            <img src="/images/pic2.JPG" class="pic" />
-            <img src="/images/pic1.jpg" class="pic" />
+        <div id="pics-top">
+            <img src="images/pic2.JPG" class="pic" />
+            <img src="images/pic1.jpg" class="pic" />
         </div>
         <h1 id="intro">Hi! I'm Blessing (also go by Bibie) <br /> welcome to my portfolio</h1>
-        <div class="pics">
-            <img src="/images/pic3.JPG" class="pic" />
-            <img src="/images/pic4.jpg" class="pic" />
+        <div id="pics-bottom">
+            <img src="images/pic3.JPG" class="pic" />
+            <img src="images/pic4.jpg" class="pic" />
         </div>
     </section>
 
     <section id="about-me">
         <div class="write-up">
-            <p> I'm originally from Nigeria, a country in West Africa. </p>
+            <p> I'm originally from Nigeria, a country in West Africa.
+                I have 1 older sister also in college, and 2 little siblings back home.
+                I'm 5 feet tall but i've been told my personality is towering.
+                <hr>
+                I have no pets but I have 2 huge stuffed animals: Bobo a teddy bear and
+                Sparkles a rare unicorn-pegasus offspring,
+                and a bunch of little ones: Nitro a fox, Frosty a snowman, Snow a snowbear,
+                Elvis a Narwhal and Duo (yes from Duolingo).
+                <hr>
+                In my free time, I like to read all sorts of books, write/watch slam poetry,
+                continuously attempt to play the piano, and catch up on sleep!
+            </p>
         </div>
         <div class="write-up">
-            <p> I currently go to the University of Rochester in Rochester, NY <br />
-                where I'm a double major in Computer Science and Brain and Cognitive Sciences with a minor in Psychology
+            <p> I currently go to the University of Rochester in Rochester, NY where
+                I'm a double major in Computer Science and Brain and Cognitive Sciences with a minor in Psychology
+                <hr>
+                I'm very active on campus because I like to keep busy and believe college shouldnt be just about
+                academics.
+                I'm a member of the Google DSC Tech Team, Womanist club, SHPE, and also a leader at our amazing poetry
+                club
+                called No Disclaimers.
+                <hr>
+                Apart from my extra-curriculars, I work as a Teaching Assistant to a CS Intro to Python and I'm a tutor
+                for
+                the same class in addition to intro to psychology, statistics and a class on foundations of behavior.
+                <hr>
+                Google SPS is the closest was the first opportunity I ever had that was closest to a technical
+                internship (I've had research internships before)
+                I' very excited to learn about frontend and backend of building a web - app and also getting to talk to
+                Googlers!
+
             </p>
         </div>
     </section>
@@ -66,18 +98,18 @@
         <h2 id="contact-text"> Want to reach me?</h2>
         <div id="contact-links">
             <a id="profile-link" href="https://github.com/bibiebliss" target="_blank">
-                <img src="/images/github.png" class="icon">
+                <img src="images/github.png" class="icon">
             </a>
             <a id="profile-link" href="https://www.linkedin.com/in/blessing-babajide/" target="_blank">
-                <img src="/images/linkedin.png" class="icon">
+                <img src="images/linkedin.png" class="icon">
             </a>
             <a id="profile-link" href="mailto:bibiebabajide@gmail.com" target="_blank">
-                <img src="/images/email.jpeg" class="icon">
+                <img src="images/email.jpeg" class="icon">
             </a>
         </div>
         <h2 id="resume-text">Before you leave... here's my resume</h2>
-        <a href="/docs/resume.pdf" target="_blank">
-            <img src="/images/resume.png" id="resume-icon" />
+        <a href="docs/resume.pdf" target="_blank">
+            <img src="images/resume.png" id="resume-icon" />
         </a>
     </section>
 </body>
