Add skills section to navigation menu.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -19,14 +19,21 @@
 
 
 <body>
-    <nav id="navbar">
-        <p> Blessing Babajide's Portfolio</p>
-        <div id="links">
-            <a href="#intro-section" class="nav-link">Pictures</a>
-            <a href="#about-me" class="nav-link">About Me</a>
-            <a href="#facts-section" class="nav-link">Fun Facts </a>
-            <a href="#projects-section" class="nav-link">Projects</a>
-            <a href="#contact-section" class="nav-link">Contact me</a>
+    <!-- Navigation/Heading -->
+    <nav class="navbar">
+        <div class="max-width">
+            <p class="logo">Blessing Babajide</p>
+            <ul class="links">
+                <li><a href="#home-section">Home</a></li>
+                <li><a href="#about-section">About Me</a></li>
+                <li><a href="#skills-section">Skills</a></li>
+                <li><a href="#facts-section">Fun Facts </a></li>
+                <li><a href="#projects-section">Projects</a></li>
+                <li><a href="#contact-section">Contact me</a></li>
+            </ul>
+            <div class="menu-bar">
+                <i class="fa fa-bars"></i>
+            </div>
         </div>
     </nav>
 
