Modify Facts Section.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -90,10 +90,19 @@
         </div>
     </section>
 
-    <section id="facts-section">
-        <p id="inst">Click here to get a random fun fact about The Office:</p>
-        <button onclick="addRandomGreeting()">The Office Fact</button>
-        <div id="greeting-container"></div>
+
+    <!-- Facts Section -->
+    <section class="facts-section" id="facts-section">
+        <div class="max-width">
+            <div class="facts-content">
+                <div class="left">
+                    <p>Click here to get a random fun fact about The Office:</p>
+                    <button onclick="addRandomGreeting()">The Office Fact</button>
+                    <div id="greeting-container"></div>
+                </div>
+                <div class="right"></div>
+            </div>
+        </div>
     </section>
 
     <section id="projects-section">
