Add Skills section.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -10,10 +10,7 @@
     <script src="script.js"></script>
     <link rel=stylesheet href="https://s3-us-west-2.amazonaws.com/colors-css/2.2.0/colors.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@700&family=Montserrat+Alternates&display=swap"
-        rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Merienda&family=Montserrat+Alternates&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -26,8 +23,8 @@
             <ul class="links">
                 <li><a href="#home-section">Home</a></li>
                 <li><a href="#about-section">About Me</a></li>
-                <li><a href="#skills-section">Skills</a></li>
                 <li><a href="#facts-section">Fun Facts </a></li>
+                <li><a href="#skills-section">Skills</a></li>
                 <li><a href="#projects-section">Projects</a></li>
                 <li><a href="#contact-section">Contact me</a></li>
             </ul>
@@ -56,33 +53,21 @@
                 <div class="left"></div>
                 <div class="right">
                     <p>
-                        I'm originally from Nigeria, a country in West Africa.
-                        In my free time, I like to read all sorts of books, write/watch slam poetry,
-                        continuously attempt to play the piano, and catch up on sleep!
+                        I'm originally from Nigeria, a country in West Africa. In my free time, I like to read all sorts of books, write/watch slam poetry, continuously attempt to play the piano, and catch up on sleep!
                     </p>
                     <br />
                     <hr>
                     <br />
                     <p>
-                        I currently go to the University of Rochester in Rochester, NY where
-                        I'm a double major in Computer Science and Brain and Cognitive Sciences with a minor in
-                        Psychology.
-                        I'm very active on campus because I like to keep busy and believe college shouldnt be just about
-                        academics.
-                        I'm a member of the Google DSC Tech Team and also a leader at an amazing poetry club called No
-                        Disclaimers.
-                        Apart from my extra-curriculars, I work as a Teaching Assistant to an Intro to Python class and
-                        I'm a tutor for the same class in addition to Intro to Psychology, Statistics and a class on
-                        foundations of behavior.
+                        I currently go to the University of Rochester in Rochester, NY where I'm a double major in Computer Science and Brain and Cognitive Sciences with a minor in Psychology. I'm very active on campus because I like to keep busy and believe college shouldnt
+                        be just about academics. I'm a member of the Google DSC Tech Team and also a leader at an amazing poetry club called No Disclaimers. Apart from my extra-curriculars, I work as a Teaching Assistant to an Intro to Python class and
+                        I'm a tutor for the same class in addition to Intro to Psychology, Statistics and a class on foundations of behavior.
                     </p>
                     <br />
                     <hr>
                     <br />
                     <p>
-                        Google SPS was the first opportunity I ever had that was closest to a technical
-                        internship (I've had research internships before)
-                        I'm very excited to learn about frontend and backend dev, working on a team project and also
-                        getting to meet Googlers!
+                        Google SPS was the first opportunity I ever had that was closest to a technical internship (I've had research internships before) I'm very excited to learn about frontend and backend dev, working on a team project and also getting to meet Googlers!
                     </p>
                 </div>
 
@@ -103,6 +88,51 @@
                 <div class="right"></div>
             </div>
         </div>
+    </section>
+
+
+    <!-- Skills Section -->
+    <section class="skills-section" id="skills-section">
+        <div class="skills-content">
+            <h2 class="head">Skills</h2>
+            <div class="chart-wrapper">
+                <ul class="chart-skills">
+                    <li>
+                        <span>CSS/HTML</span>
+                    </li>
+                    <li>
+                        <span>Java</span>
+                    </li>
+                    <li>
+                        <span>JavaScript</span>
+                    </li>
+                    <li>
+                        <span>Python</span>
+                    </li>
+                    <li>
+                        <span>Git</span>
+                    </li>
+                </ul>
+                <ul class="chart-levels">
+                    <li>
+                        <span>Newbie</span>
+                    </li>
+                    <li>
+                        <span>Beginner</span>
+                    </li>
+                    <li>
+                        <span>Competent</span>
+                    </li>
+                    <li>
+                        <span>Proficient</span>
+                    </li>
+                    <li>
+                        <span>Advanced</span>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <a href="#docs/resume.pdf">Download CV</a>
     </section>
 
     <section id="projects-section">
