--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -10,7 +10,8 @@
     <script src="script.js"></script>
     <link rel=stylesheet href="https://s3-us-west-2.amazonaws.com/colors-css/2.2.0/colors.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&family=Ubuntu:wght@500&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -53,21 +54,30 @@
                 <div class="left"></div>
                 <div class="right">
                     <p>
-                        I'm originally from Nigeria, a country in West Africa. In my free time, I like to read all sorts of books, write/watch slam poetry, continuously attempt to play the piano, and catch up on sleep!
+                        I'm originally from Nigeria, a country in West Africa. In my free time, I like to read all sorts
+                        of books, write/watch slam poetry, continuously attempt to play the piano, and catch up on
+                        sleep!
                     </p>
                     <br />
                     <hr>
                     <br />
                     <p>
-                        I currently go to the University of Rochester in Rochester, NY where I'm a double major in Computer Science and Brain and Cognitive Sciences with a minor in Psychology. I'm very active on campus because I like to keep busy and believe college shouldnt
-                        be just about academics. I'm a member of the Google DSC Tech Team and also a leader at an amazing poetry club called No Disclaimers. Apart from my extra-curriculars, I work as a Teaching Assistant to an Intro to Python class and
-                        I'm a tutor for the same class in addition to Intro to Psychology, Statistics and a class on foundations of behavior.
+                        I currently go to the University of Rochester in Rochester, NY where I'm a double major in
+                        Computer Science and Brain and Cognitive Sciences with a minor in Psychology. I'm very active on
+                        campus because I like to keep busy and believe college shouldnt
+                        be just about academics. I'm a member of the Google DSC Tech Team and also a leader at an
+                        amazing poetry club called No Disclaimers. Apart from my extra-curriculars, I work as a Teaching
+                        Assistant to an Intro to Python class and
+                        I'm a tutor for the same class in addition to Intro to Psychology, Statistics and a class on
+                        foundations of behavior.
                     </p>
                     <br />
                     <hr>
                     <br />
                     <p>
-                        Google SPS was the first opportunity I ever had that was closest to a technical internship (I've had research internships before) I'm very excited to learn about frontend and backend dev, working on a team project and also getting to meet Googlers!
+                        Google SPS was the first opportunity I ever had that was closest to a technical internship (I've
+                        had research internships before) I'm very excited to learn about frontend and backend dev,
+                        working on a team project and also getting to meet Googlers!
                     </p>
                 </div>
 
@@ -135,14 +145,34 @@
         <a href="#docs/resume.pdf">Download CV</a>
     </section>
 
-    <section id="projects-section">
-        <p id="projects-text"> Here are some of my projects: </p>
-        <div id="project-pics">
-            <a href="https://glitch.com/edit/#!/lightsoundgame?previewSize=100&attributionHidden=false&sidebarCollapsed=false&path=index.html&previewFirst=false"
-                target="_blank">
-                <img class="project-tile" src="images/project1.png" />
-            </a>
 
+    <!-- Projects Section -->
+    <section class="projects-section" id="projects-section">
+        <div class="max-width">
+            <h2 class="title">My Projects</h2>
+            <div class="projects-content">
+                <div class="tile" id="gh">
+                    <div class="box">
+                        <i class="fa fa-github"></i>
+                        <div class="text">Github</div>
+                        <p>My Github includes the bulk of my technical projects and organization projects</p>
+                    </div>
+                </div>
+                <div class="tile" id="cp">
+                    <div class="box">
+                        <a href=""><i class="fa fa-codepen"></i></a>
+                        <div class="text">Codepen</div>
+                        <p>My Codepen contains projects done in line with FreeCodeCamp certifications</p>
+                    </div>
+                </div>
+                <div class="tile">
+                    <div class="box">
+                        <i class="fa fa-laptop"></i>
+                        <div class="text">This portfolio!</div>
+                        <p>I coded this entire portfolio by myself during the Google SPS Program</p>
+                    </div>
+                </div>
+            </div>
         </div>
 
     </section>
