--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -10,8 +10,7 @@
     <script src="script.js"></script>
     <link rel=stylesheet href="https://s3-us-west-2.amazonaws.com/colors-css/2.2.0/colors.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&family=Ubuntu:wght@500&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -54,30 +53,21 @@
                 <div class="left"></div>
                 <div class="right">
                     <p>
-                        I'm originally from Nigeria, a country in West Africa. In my free time, I like to read all sorts
-                        of books, write/watch slam poetry, continuously attempt to play the piano, and catch up on
-                        sleep!
+                        I'm originally from Nigeria, a country in West Africa. In my free time, I like to read all sorts of books, write/watch slam poetry, continuously attempt to play the piano, and catch up on sleep!
                     </p>
                     <br />
                     <hr>
                     <br />
                     <p>
-                        I currently go to the University of Rochester in Rochester, NY where I'm a double major in
-                        Computer Science and Brain and Cognitive Sciences with a minor in Psychology. I'm very active on
-                        campus because I like to keep busy and believe college shouldnt
-                        be just about academics. I'm a member of the Google DSC Tech Team and also a leader at an
-                        amazing poetry club called No Disclaimers. Apart from my extra-curriculars, I work as a Teaching
-                        Assistant to an Intro to Python class and
-                        I'm a tutor for the same class in addition to Intro to Psychology, Statistics and a class on
-                        foundations of behavior.
+                        I currently go to the University of Rochester in Rochester, NY where I'm a double major in Computer Science and Brain and Cognitive Sciences with a minor in Psychology. I'm very active on campus because I like to keep busy and believe college shouldnt
+                        be just about academics. I'm a member of the Google DSC Tech Team and also a leader at an amazing poetry club called No Disclaimers. Apart from my extra-curriculars, I work as a Teaching Assistant to an Intro to Python class and
+                        I'm a tutor for the same class in addition to Intro to Psychology, Statistics and a class on foundations of behavior.
                     </p>
                     <br />
                     <hr>
                     <br />
                     <p>
-                        Google SPS was the first opportunity I ever had that was closest to a technical internship (I've
-                        had research internships before) I'm very excited to learn about frontend and backend dev,
-                        working on a team project and also getting to meet Googlers!
+                        Google SPS was the first opportunity I ever had that was closest to a technical internship (I've had research internships before) I'm very excited to learn about frontend and backend dev, working on a team project and also getting to meet Googlers!
                     </p>
                 </div>
 
@@ -142,7 +132,7 @@
                 </ul>
             </div>
         </div>
-        <a href="#docs/resume.pdf">Download CV</a>
+        <a href="#">Download CV</a>
     </section>
 
 
@@ -177,23 +167,23 @@
 
     </section>
 
-    <section id="contact-section">
-        <h2 id="contact-text"> Want to reach me?</h2>
-        <div id="contact-links">
-            <a id="profile-link" href="https://github.com/bibiebliss" target="_blank">
-                <img src="images/github.png" class="icon">
-            </a>
-            <a id="profile-link" href="https://www.linkedin.com/in/blessing-babajide/" target="_blank">
-                <img src="images/linkedin.png" class="icon">
-            </a>
-            <a id="profile-link" href="mailto:bibiebabajide@gmail.com" target="_blank">
-                <img src="images/email.jpeg" class="icon">
-            </a>
+
+
+    <!-- Contact Section -->
+    <section class="contact-section" id="contact-section">
+        <div class="max-width">
+            <div class="c-content">
+                <h2 class="c-text"> Reach Out </h2>
+                <div id="contact-links">
+                    <a id="profile-link" href="https://www.linkedin.com/in/blessing-babajide/" target="_blank">
+                        <img src="images/linkedin.png" class="icon">
+                    </a>
+                    <a id="profile-link" href="mailto:bibiebabajide@gmail.com" target="_blank">
+                        <img src="images/email.jpeg" class="icon">
+                    </a>
+                </div>
+            </div>
         </div>
-        <h2 id="resume-text">Before you leave... here's my resume</h2>
-        <a href="docs/resume.pdf" target="_blank">
-            <img src="images/resume.png" id="resume-icon" />
-        </a>
     </section>
 </body>
 
