Add Swift to skills section.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -112,6 +112,9 @@
                     <li>
                         <span>Git</span>
                     </li>
+                    <li>
+                        <span>Swift</span>
+                    </li>
                 </ul>
                 <ul class="chart-levels">
                     <li>
