Add JS function that fetches hard-coded  message from server.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -186,6 +186,12 @@
                     </a>
                 </div>
             </div>
+            <p>Click this button to see some under construction content!</p>
+            <button onclick="showContent()">
+                Click Me!
+            </button>
+            <div id="response-container"></div>
+
         </div>
     </section>
 </body>
