--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -172,12 +172,32 @@
 
 
 
-    <!-- Contact Section -->
+     <!-- Contact Section -->
     <section class="contact-section" id="contact-section">
         <div class="max-width">
             <div class="c-content">
-                <h2 class="c-text"> Reach Out </h2>
-                <div id="contact-links">
+                <div class="left">
+                    <form action="/form-handler" method="POST">
+                        <div class="field">
+                            <div class="name">
+                                <input type="text" name="Name" placeholder="Name" required>
+                            </div>
+                            <div class="email">
+                                <input type="email" name="Email" placeholder="Email" required>
+                            </div>
+                            <div class="field">
+                                <input type="text" name="Subject" placeholder="Subject" required>
+                            </div>
+                            <div class="text-area">
+                                <textarea cols="30" rows="10" name="Description" placeholder="Description"></textarea>
+                            </div>
+                            <div class="button">
+                                <button type="submit">Send Message</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="right">
                     <a id="profile-link" href="https://www.linkedin.com/in/blessing-babajide/" target="_blank">
                         <img src="images/linkedin.png" class="icon">
                     </a>
@@ -186,12 +206,6 @@
                     </a>
                 </div>
             </div>
-            <p>Click this button to see some under construction content!</p>
-            <button onclick="showContent()">
-                Click Me!
-            </button>
-            <div id="response-container"></div>
-
         </div>
     </section>
 </body>
