Add hard coded chart to page.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -7,6 +7,7 @@
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="script.js"></script>
     <link rel=stylesheet href="https://s3-us-west-2.amazonaws.com/colors-css/2.2.0/colors.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -95,7 +96,9 @@
                     <button onclick="showContent()">Click Me!</button>
                     <div id="response-container"></div>
                 </div>
-                <div class="right"></div>
+                <div class="right">
+                    <div id="chart-container"></div>
+                </div>
             </div>
         </div>
     </section>
